--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3102,7 +3102,7 @@ The facet $13|24|57|6 \times 3|17|456|2 \in \SUD$, satisfies the inequality thro
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
-\section{Shift lattice}
+\section{Shift lattices}
 \label{sec:shifts}
 
 In this section, we prove that the geometric $\SU$ diagonal $\SUD$ agrees at the cellular level with the original Saneblidze-Umble diagonal defined in~\cite{SaneblidzeUmble}.
