--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -940,7 +940,7 @@ Remarkably, the flat poset (and thus the M\"obius, $f$- and $b$- polynomials) of
 We first introduce the main characters of this section, which will describe the combinatorics of the flat poset of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ of \cref{def:multiBraidArrangement}.
 
 \begin{definition}
-\label{def:partitionForests}
+\label{def:intersectionHypergraph}
 The \defn{intersection hypergraph} of a $\ell$-tuple~$\b{F} \eqdef (F_1, \dots, F_\ell)$ of set partitions of~$[n]$ is the $\ell$-regular $\ell$-partite hypergraph on all parts of all the partitions~$F_i$ for~${i \in [\ell]}$, with a hyperedge connecting the parts containing~$j$  for each~$j \in [n]$.
 \end{definition}
 
