--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -677,13 +677,13 @@ The $f$-polynomial, the $b$-polynomial, and the M\"obius polynomial of the hyper
 %
 For the arrangement~$\arrangement$ of $5$ hyperplanes of \cref{fig:arrangement}, we have
 \[
-\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4 \ ,
+\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4 ,
 \]
 so that
 \[
 \fPol = \mobPol[\arrangement][-x][-1] = 12 \, x^2 + 15 \, x + 4 
 \qquad \text{and}\qquad
-\bPol = \mobPol[\arrangement][-x][1] = 2 \, x^2 + 5 \, x + 4 \ .
+\bPol = \mobPol[\arrangement][-x][1] = 2 \, x^2 + 5 \, x + 4 .
 \]
 \end{example}
 
@@ -3057,7 +3057,7 @@ Similarly $\min_{\mathbf{v}} \sigma \leq \sigma$, as repeated applications of \c
 \begin{example}
 The facet $13|24|57|6 \times 3|17|456|2 \in \SUD$, satisfies the inequality through the vertices
 \begin{align*}
-    13|24|57|6 <  3|1|4|2|7|5|6 <  3|1|7|4|5|6|2 <  3|17|456|2 \ .
+    13|24|57|6 <  3|1|4|2|7|5|6 <  3|1|7|4|5|6|2 <  3|17|456|2 \, .
 \end{align*}
 \end{example}
 
@@ -3294,7 +3294,7 @@ In particular, for a pair of ordered partitions $(R_{\mathbf{M}}(\sigma),L_{\mat
 and consequently
 \begin{align}
 \label{eq:max-2}
-\max R_{\mathbf{M}}(\sigma)_{i,i+1} = \max \sigma_{i+1} \qquad \text{and}\qquad \max L_{\mathbf{N}}(\tau)_{i,i+1} = \max \tau_{i} \ . \tag{B}
+\max R_{\mathbf{M}}(\sigma)_{i,i+1} = \max \sigma_{i+1} \qquad \text{and}\qquad \max L_{\mathbf{N}}(\tau)_{i,i+1} = \max \tau_{i} . \tag{B}
 \end{align}
 \end{proposition}
 
@@ -3310,7 +3310,7 @@ As $R_{M_k}$ is an admissible operator, we know two things: firstly that $\min M
 So combining these, we know that
 \begin{align}
 \label{eq:shift-subset-dominates}
-\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1} = \max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k,k+1} \ .  \tag{W}
+\min M_k > \max R_{\mathbf{M}}(\sigma)_{k+1} = \max \sigma_{k+1} = \max R_{\mathbf{M}}(\sigma)_{k,k+1} .  \tag{W}
 \end{align}
 A key consequence of this inequality is that the intersection graph of $(R_{M_k}R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ is a bipartite tree conditional on $(R_{\mathbf{M}}(\sigma),L_{\mathbf{N}}(\tau))$ being a bipartite tree: the shift will not disconnect the graph as none of the shifted elements are in the path $R_{\mathbf{M}}(\sigma)_{k,k+1}$. 
 So, it is legitimate to speak of unique paths between blocks. 
@@ -4108,7 +4108,7 @@ The $\SU$ \defn{shift poset} is defined similarly.
 Then, for each permutation $v$ of $[n]$, we define the subposet \defn{$\hour^\LA$} (\resp \defn{$\hour^\SU$}) to be the set of all admissible $\LA$ (\resp $\SU$) shifts of the associated~$\SCP$.
 \end{definition}
 
-Given the shift definitions of $\SUD$ and $\LAD$ (\cref{def:classical-SU,def:classical-LA}), the subposets $\hour^\LA$ and $\hour^\SU$ are clearly connected components of their posets, with a unique minimal element corresponding to the $\SCP$.
+Given the shift definitions of $\SUD$ and $\LAD$ (\cref{def:classical-SU,def:classical-LA}), the subposets $\hour^\LA$ and~$\hour^\SU$ are clearly connected components of their posets, with a unique minimal element corresponding to the $\SCP$.
 We now aim to prove they are also lattices (\cref{prop:shift lattice}).
 
 \begin{lemma}
@@ -4123,12 +4123,12 @@ As such, we can commute any two shift operators.
 \end{proof}
 
 \begin{definition}
-	\label{def:heights}
+\label{def:heights}
 Let $v$ be a permutation of $[n]$, and $(\sigma,\tau)$ the SCP corresponding to $v$.
 For $\rho \in [n]$, we define the $\LA$ \defn{left height} and \defn{right height} of $\rho$ to be 
 \begin{align*}
-	\ell_v(\rho) \eqdef \max (\{0\}\cup \{m>0: L_{\rho}(\sigma) \text{ is a path admissible $\LA$ $m$-shift} \}) \ , \\
-	r_v(\rho) \eqdef \max (\{0\}\cup \{m>0: R_{\rho}(\tau) \text{ is a path admissible $\LA$ $m$-shift} \}) \ .
+	\ell_v(\rho) \eqdef \max (\{0\}\cup \{m>0: L_{\rho}(\sigma) \text{ is a path admissible $\LA$ $m$-shift} \}), \\
+	r_v(\rho) \eqdef \max (\{0\}\cup \{m>0: R_{\rho}(\tau) \text{ is a path admissible $\LA$ $m$-shift} \}).
 \end{align*}
 The left and right heights for the $\SU$ diagonal are defined similarly. 
 \end{definition}
@@ -4329,7 +4329,7 @@ In particular, every element which was covered by $v$ is now covered by the mini
 Given our previously obtained formulae for the number of elements in the diagonal (\cref{subsec:enumerationDiagonalPermutahedra}), and the results of this section, we obtain the following statistics on permutations.
 
 \begin{corollary}
-	\label{cor:statistics-lattice}
+\label{cor:statistics-lattice}
 Using the heights of either diagonal,
 \begin{align*}
 2(n+1)^{n-2} = \sum_{v \in \mathbb{S}_n} \prod_{\rho \in [n]} (\ell_v(\rho)+1)(r_v(\rho)+1)
@@ -4359,18 +4359,19 @@ We define inductively a subdivision $\divcube{n-1}^\SU$ of the $(n-1)$-dimension
 \begin{construction}
 \label{constr:cubicPermutahedron1}
 Given a $(n-k)$-dimensional face $\sigma = \sigma_1| \cdots |\sigma_k$ of the $(n-1)$-dimensional permutahedron $\Perm[n]$, we set $n_j \eqdef \card{\sigma_{k-j+1}\cup\dots\cup \sigma_k}$, and define a subdivision $I_\sigma \eqdef I_1 \cup \dots \cup I_k$ of the interval $[0,1]$ by the following formulas
-\begin{equation*}
+\[
 	I_j \eqdef
 	\begin{cases}
 		\left[0,1 - 2^{-n_j}\right] & \text{ if } j=1, \\
 		\left[1 - 2^{-n_{j-1}}, 1 - 2^{-n_{j}}\right]  & \text{ if } 1 < j < k, \\
 		\left[1 - 2^{-n_{j-1}},1\right] & \text{ if } j=k .
 	\end{cases}
-\end{equation*}
+\]
 Let $\divcube{0}^\SU$ be the $0$-dimensional cube (a point), trivially subdivided by the sole element $1$ of~$\Perm[1]$.
 Then, assuming we have constructed the subdivision $\divcube{n-1}^\SU$ of the $(n-1)$-cube, we construct $\divcube{n}^\SU$ as the subdivision of $\divcube{n-1}^\SU \times [0,1]$ given, for each face $\sigma$ of $\divcube{n-1}^\SU$, by the polytopal complex $\sigma \times I_\sigma$. 
 We label the faces $\sigma \times I$ of the subdivided rectangular prism $\sigma \times I_\sigma$ by the following rule
-\begin{align} \label{eq:sub}
+\begin{align}
+\label{eq:sub}
 	\sigma \times I \eqdef
 	\begin{cases}
 		\sigma_1| \cdots |\sigma_k| n+1 & \text{if } I = \{0\}, \\
@@ -4385,7 +4386,8 @@ This defines a subdivision $\divcube{n}^\SU$ of the $n$-cube.
 
 \cref{fig:cubicPermutahedron1} illustrates this subdivision for the first few dimensions.
 We indicate, in bold, the embedding $\divcube{n-1}^\SU\hookrightarrow \divcube{n}^\SU$ induced by the natural embedding $\R^{n-1} \hookrightarrow \R^n$.
-Only the vertices of $\divcube{3}^\SU$ are labelled, but its edges, facets and outer face are all identified with the expected elements of $\Perm[4]$.
+Only the vertices of~$\divcube{3}^\SU$ are labelled, but its edges, facets and outer face are all identified with the expected elements of $\Perm[4]$.
+%
 \begin{figure}[h!]
 	\begin{center}
 	{\small
@@ -4420,22 +4422,22 @@ Only the vertices of $\divcube{3}^\SU$ are labelled, but its edges, facets and o
 \end{figure}
 
 \begin{remark}
-	\label{rem:coordinates}
-	A consequence of the construction is that each edge of $\divcube{n}^\SU$ is parallel to one of the canonical basis vectors $e_i$ of $\R^n$, and corresponds to shifting the element $i+1$ of $[n+1]\ssm \{1\}$.
+\label{rem:coordinates}
+A consequence of the construction is that each edge of $\divcube{n}^\SU$ is parallel to one of the canonical basis vectors $e_i$ of $\R^n$, and corresponds to shifting the element $i+1$ of $[n+1]\ssm \{1\}$.
 \end{remark}
 
 \begin{proposition}
-	\label{prop:subdiv cube Combinatorially Isomorphic to perm}
-	The polytopal complex $\divcube{n}^\SU$ is combinatorially isomorphic to the permutahedron $\Perm[n+1]$.
+\label{prop:subdiv cube Combinatorially Isomorphic to perm}
+The polytopal complex $\divcube{n}^\SU$ is combinatorially isomorphic to the permutahedron $\Perm[n+1]$.
 \end{proposition}
 
 \begin{proof}
-	By construction it is clear that the faces of $\divcube{n}^\SU$ and $\Perm[n+1]$ are in bijection, and that this bijection preserves the dimension. 
-	It remains to show that this bijection is a poset isomorphism.
-	Let $\sigma_1 | \ldots | \sigma_i | \sigma_{i+1} | \ldots | \sigma_k \prec \sigma_1 | \ldots | \sigma_i \cup \sigma_{i+1} | \ldots | \sigma_k$ be a covering relation in the face poset of $\Perm[n+1]$.
-	We need to see that the corresponding faces $F,G$ of $\divcube{n}^\SU$ satisfy $F \prec G$. 
-	From \cref{eq:sub} this clearly holds for lines.
-	Since any face of $\divcube{n}^\SU$ is a product of lines, the result follows by induction on the dimension of the faces.
+By construction it is clear that the faces of $\divcube{n}^\SU$ and $\Perm[n+1]$ are in bijection, and that this bijection preserves the dimension. 
+It remains to show that this bijection is a poset isomorphism.
+Let $\sigma_1 | \ldots | \sigma_i | \sigma_{i+1} | \ldots | \sigma_k \prec \sigma_1 | \ldots | \sigma_i \cup \sigma_{i+1} | \ldots | \sigma_k$ be a covering relation in the face poset of $\Perm[n+1]$.
+We need to see that the corresponding faces $F,G$ of $\divcube{n}^\SU$ satisfy $F \prec G$. 
+From \cref{eq:sub} this clearly holds for lines.
+Since any face of $\divcube{n}^\SU$ is a product of lines, the result follows by induction on the dimension of the faces.
 \end{proof}
 
 We now unpack how certain properties of $\Perm$ have been encoded in the cubical structure of $\divcube{n}^\SU$.
@@ -4454,13 +4456,13 @@ A $k$-subdivision cube has a unique maximal (\resp minimal) vertex with respect 
 \end{lemma}
 
 \begin{proof}
-	By construction, the edges of $\divcube{n}^\SU$ are parallel to the basis vectors of $\R^n$ (\cref{rem:coordinates}), and correspond to inversions on permutations. 
-	Thus, the vector $\b{v}\eqdef(1,\ldots,1)$ induces the weak order on the vertices of $\divcube{n}^\SU$.  
-	Since each $k$-subdivision cube is a rectangular prism whose edges are not perpendicular to $\b{v}$, the scalar product with $\b{v}$ is maximized (\resp minimized) at a unique vertex. 
+By construction, the edges of $\divcube{n}^\SU$ are parallel to the basis vectors of $\R^n$ (\cref{rem:coordinates}), and correspond to inversions on permutations. 
+Thus, the vector $\b{v}\eqdef(1,\ldots,1)$ induces the weak order on the vertices of $\divcube{n}^\SU$.  
+Since each $k$-subdivision cube is a rectangular prism whose edges are not perpendicular to $\b{v}$, the scalar product with $\b{v}$ is maximized (\resp minimized) at a unique vertex. 
 \end{proof}
 
 \begin{definition}
-	The \defn{maximal (\resp minimal) $k$-face} of a $k$-subdivision cube, with respect to the weak order, is the unique $k$-face in the subdivision cube which contains the maximal (\resp minimal) vertex.
+The \defn{maximal (\resp minimal) $k$-face} of a $k$-subdivision cube, with respect to the weak order, is the unique $k$-face in the subdivision cube which contains the maximal (\resp minimal) vertex.
 \end{definition}
 
 \begin{construction}
@@ -4527,10 +4529,12 @@ The ordered partition $\sigma$ admits three distinct rights shifts, $\red{\mathb
 \end{example}
 
 \begin{theorem}
-	\label{thm:cubical-SU}
-	Let $v$ be a vertex of the cubical permutahedron $\divcube{n}^\SU$, and let $(\sigma,\tau)$ be its associated~$\SCP$. 
-	Then, we have 
-	\[ \hour^\SU = \bigcup_{\b{M},\b{N}}R_{\b{M}}(\sigma) \times L_{\b{N}}(\tau) \ , \]
+\label{thm:cubical-SU}
+Let $v$ be a vertex of the cubical permutahedron $\divcube{n}^\SU$, and let $(\sigma,\tau)$ be its associated~$\SCP$. 
+Then, we have 
+\[
+\hour^\SU = \bigcup_{\b{M},\b{N}}R_{\b{M}}(\sigma) \times L_{\b{N}}(\tau) \ ,
+\]
 where the union is taken over all block-admissible sequences of $\SU$ shifts $\b{M},\b{N}$.
 \end{theorem}
 
@@ -4563,7 +4567,7 @@ The $\LA$ diagonal also admits a similar cubical description, which we may quick
 We first define inductively a subdivision $\divcube{n-1}^{\LA}$ of the $(n-1)$-dimensional cube which is combinatorially isomorphic to the permutahedron $\Perm$, analogous to the one from the preceding sections. 
 
 \begin{construction}
-	\label{const:cubical-LA}
+\label{const:cubical-LA}
 Given a $(n-k)$-dimensional face $\sigma = \sigma_1| \cdots |\sigma_k$ of the $(n-1)$-dimensional permutahedron $\Perm[n]$, we set $n_j \eqdef \card{\sigma_{k-j+1}\cup\dots\cup \sigma_k}$, and define a subdivision $I_\sigma \eqdef I_1 \cup \dots \cup I_k$ of the interval $[0,1]$ by the same formulas as in \cref{constr:cubicPermutahedron1}.
 
 Let $\divcube{0}^\LA$ be the $0$-dimensional cube (a point), trivially subdivided by the sole element $1$ of~$\Perm[1]$.
@@ -4575,7 +4579,7 @@ We label the faces $\sigma \times I$ of the subdivided rectangular prism $\sigma
 		\sigma_1'| \cdots |\sigma_k'| 1 & \text{if } I = \{0\}, \\
 		\sigma_1'| \cdots |\sigma_j'| 1 |\sigma_{j+1}'| \cdots |\sigma_k' & \text{if } I = I_j \cap I_{j+1} \text{ with } 1 \leq j \leq k-1 , \\
 		1|\sigma_1'| \cdots |\sigma_k'  & \text{if } I = \{1\}, \\
-		\sigma_1'| \cdots |\sigma_j' \cup \{1\}| \cdots |\sigma_k' & \text{if } I = I_j \text{ with }  1\leq j \leq k \ , 
+		\sigma_1'| \cdots |\sigma_j' \cup \{1\}| \cdots |\sigma_k' & \text{if } I = I_j \text{ with }  1\leq j \leq k , 
 	\end{cases} 
 \end{align*}
 where each block of $\sigma$ has been renumbered as $\sigma_i' \eqdef \{p+1 \ | \ p \in \sigma_i\}$ for all $1 \leq i \leq k$.
@@ -4625,26 +4629,28 @@ Recall from \cref{subsec:isos-LA-SU} the face poset isomorphism of the permutahe
 We have the analogue of \cref{thm:cubical-SU} for the $\LA$ diagonal. 
 
 \begin{theorem}
-	\label{prop:LA-cubical}
-	Let $v$ be a vertex of the cubical permutahedron $\divcube{n}$, and let $(\sigma,\tau)$ be its associated~$\SCP$. 
-	Then, we have 
-	\[ \hour^\LA = \bigcup_{\b{M},\b{N}}L_{\b{M}}(\sigma) \times R_{\b{N}}(\tau) \ , \]
+\label{prop:LA-cubical}
+Let $v$ be a vertex of the cubical permutahedron $\divcube{n}$, and let $(\sigma,\tau)$ be its associated~$\SCP$. 
+Then, we have 
+\[
+\hour^\LA = \bigcup_{\b{M},\b{N}}L_{\b{M}}(\sigma) \times R_{\b{N}}(\tau) \ ,
+\]
 where the union is taken over all block-admissible sequences of $\LA$ shifts $\b{M},\b{N}$.
 \end{theorem}
 
 \begin{proof}
-	It is straightforward to see that the involution $r$ induces a $k$-subdivision cube isomorphism $r:\divcube{n}^{\SU}\to \divcube{n}^{\LA}$ between the cubical subdivisions of \cref{constr:cubicPermutahedron1} and \cref{const:cubical-LA}, which sends the hourglass $\hour^\SU$ to the hourglass $\hour[r(v)]^\LA$.  
-	By \cref{thm:cubical-SU}, we know that $\hour^\SU$ is generated by $\SU$ shifts; we want to deduce that $\hour[r(v)]^\LA$ is generated by $\LA$ shifts. 
-	First, we observe that the diagram
-	\begin{center}
-	\begin{tikzcd}
-	\SCP \arrow[r,"t(r\times r)",leftrightarrow] \arrow[d,leftrightarrow] & \SCP \arrow[d,leftrightarrow]\\
-	\mathbb{S}_n \arrow[r,"r"',leftrightarrow] & \mathbb{S}_n ,
-	\end{tikzcd}
-	\end{center}
-	where $t$ is the permutation of the two factors, and the vertical arrows are the bijection between $\SCP$s and permutations (\cref{def:strong-complementary-pairs}), is commutative.
-	Thus, if we start from a $\SCP$ and consider its associated $\SU$ hourglass $\hour^\SU$, applying the subdivision cube isomorphism $r$ or applying the map $t(r \times r)$ both give the $\LA$ hourglass $\hour[r(v)]^\LA$.
-	Combining this with the fact that the map $t(r\times r):\LAD\to \SUD$ is an isomorphism between the $\LA$ and $\SU$ diagonal (\cref{rem:Alternate Isomorphism}) which preserves left and right shifts (\cref{prop:trr is an isomorphism of shifts}), we obtain the desired result. 
+It is straightforward to see that the involution $r$ induces a $k$-subdivision cube isomorphism $r:\divcube{n}^{\SU}\to \divcube{n}^{\LA}$ between the cubical subdivisions of \cref{constr:cubicPermutahedron1} and \cref{const:cubical-LA}, which sends the hourglass $\hour^\SU$ to the hourglass $\hour[r(v)]^\LA$.  
+By \cref{thm:cubical-SU}, we know that $\hour^\SU$ is generated by $\SU$ shifts; we want to deduce that $\hour[r(v)]^\LA$ is generated by $\LA$ shifts. 
+First, we observe that the diagram
+\begin{center}
+\begin{tikzcd}
+\SCP \arrow[r,"t(r\times r)",leftrightarrow] \arrow[d,leftrightarrow] & \SCP \arrow[d,leftrightarrow]\\
+\mathbb{S}_n \arrow[r,"r"',leftrightarrow] & \mathbb{S}_n ,
+\end{tikzcd}
+\end{center}
+where $t$ is the permutation of the two factors, and the vertical arrows are the bijection between $\SCP$s and permutations (\cref{def:strong-complementary-pairs}), is commutative.
+Thus, if we start from a $\SCP$ and consider its associated $\SU$ hourglass $\hour^\SU$, applying the subdivision cube isomorphism $r$ or applying the map $t(r \times r)$ both give the $\LA$ hourglass $\hour[r(v)]^\LA$.
+Combining this with the fact that the map $t(r\times r):\LAD\to \SUD$ is an isomorphism between the $\LA$ and $\SU$ diagonal (\cref{rem:Alternate Isomorphism}) which preserves left and right shifts (\cref{prop:trr is an isomorphism of shifts}), we obtain the desired result. 
 \end{proof}
 
 \begin{figure}[h!]
@@ -4680,10 +4686,10 @@ where the union is taken over all block-admissible sequences of $\LA$ shifts $\b
 \end{figure}
 
 \begin{example}
-	Applying the isomorphism $r$ to \cref{ex:subdivision cubes} yields the illustration of \cref{fig:hourglass2}.
-	As $r$ is an isomorphism of $k$-subdivision cubes, the maximal pair of $\SU$ subdivision cubes has been mapped to a maximal pair of $\LA$ subdivision cubes.
-	Note that the maximal $\SU$ $2$-subdivision cube with maximal vertex $4|3|1|2$ was generated by $\SU$ right shifts.
-	Its image under $r$ is the maximal $\LA$ $2$-subdivision cube with minimal vertex $1|2|4|3$, and it is generated by $\LA$ right shifts.
+Applying the isomorphism $r$ to \cref{ex:subdivision cubes} yields the illustration of \cref{fig:hourglass2}.
+As $r$ is an isomorphism of $k$-subdivision cubes, the maximal pair of $\SU$ subdivision cubes has been mapped to a maximal pair of $\LA$ subdivision cubes.
+Note that the maximal $\SU$ $2$-subdivision cube with maximal vertex $4|3|1|2$ was generated by $\SU$ right shifts.
+Its image under $r$ is the maximal $\LA$ $2$-subdivision cube with minimal vertex $1|2|4|3$, and it is generated by $\LA$ right shifts.
 \end{example}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -5129,7 +5135,7 @@ Recall that the topological cellular operadic bimodule structure on the Forcey m
 \K_{(i_1,\ldots,i_k)} \times \J_{i_1} \times \cdots \times \J_{i_k} 
 \arrow[rr,hookrightarrow, "\Theta^{i_1, \ldots , i_k}"]
 & &
-\J_{i_1+\cdots + i_k}\ .
+\J_{i_1+\cdots + i_k}\, .
 \end{tikzcd}
 }}
 \]
