last figure is a table

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -5596,7 +5596,7 @@ The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a di
 \label{fig:trees}
 \end{figure}
 
-\begin{figure}[h]
+\begin{table}[h]
 	\begin{center}
 	\begin{tabular}{c|c|c|c|c|c} 
 	Internal edges & $\LA$ diagonal & $\LA$ only & Shared & $\SU$ only & $\SU$ diagonal \\
@@ -5611,7 +5611,7 @@ The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a di
 	\end{center}
 	\caption{Number of facets in the $\LA$ and $\SU$ diagonals of the multiplihedra, indexed by linear trees with $n$ internal edges.}
 	\label{table:multiplihedra}
-\end{figure}
+\end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
